testsuite/tests/parser/should_fail/NoDoAndIfThenElse.hs

{-# LANGUAGE NoDoAndIfThenElse #-}

module NoDoAndIfThenElse where

foo :: IO ()
foo = do if True
         then return ()
         else return ()
